--- a/src/desktop/src/ui/views/wallet/receive.scss
+++ b/src/desktop/src/ui/views/wallet/receive.scss
@@ -11,12 +11,13 @@
     @media screen and (max-width: 860px) {
         display: block;
         position: relative;
+        padding: 40px 20px 0;
         &:before {
             content: '';
             position: absolute;
             width: calc(100% - 40px);
             height: 2px;
-            top: -10px;
+            top: 0px;
             left: 20px;
             background: var(--body-alt);
         }
